# randomStuff

./: README.md  dino-debugger.sh  mastermind.c
brainfuck/: CMakeLists.txt  brainfuckInterpreter.c  brainfuckProgram.txt  helloWorld.bf  ookInterpreter.c  ookToBrainfuckTranslator.c
brainfuck/interpreters/: brainfuckInterpreter.c  ookInterpreter.c
brainfuck/translators/: brainfuckToOokTranslator.c
wordmakinator/: README.txt  randomWordGenerator  randomWordGenerator.cpp  wordChecker.sh  wordFinder_v1.1.1.cpp  wordFinder_v1.1.cpp  wordFinder_v1.cpp
wordmakinator/finalProduct/: README.txt  american-english.txt  wordatron
